# piperx_humble_ws

./: .gitignore  README.md  USAGE.md
calibration_results/: 2026-07-15_14-12-23_calibration.json  2026-07-15_15-21-25_calibration.json
config/: dabai_dc1_camera_info.yaml  dabai_dc1_usb_cam.yaml
docs/: piperx_anygrasp_software_design.md  piperx_rviz_moveit_test.md  workspace_sources.md
patches/: agx_arm_ros_local_changes.patch  handeye_calibration_ros_local_changes.patch
scripts/: anygrasp_apply_scene.py  anygrasp_full_pipeline.py  anygrasp_moveit_pregrasp.py  anygrasp_roi_selector.py  anygrasp_ros_infer.py  anygrasp_safe_pick.py  chessboard_pose_publisher.py  dabai_uvc_publisher.py  moveit_ik_diagnostics.py  piperx_grasp_preflight.py  rotate_rgbd_publisher.py
src/grasp_interfaces/: CMakeLists.txt  package.xml
src/grasp_interfaces/action/: ExecuteGrasp.action
src/grasp_interfaces/msg/: GraspCandidate.msg  GraspCandidateArray.msg  GraspTarget.msg
src/grasp_interfaces/srv/: DetectGrasps.srv
src/grasp_task_manager/: package.xml  setup.cfg  setup.py
src/grasp_task_manager/grasp_task_manager/: grasp_task_manager_node.py  pipeline_runner.py  state_machine.py
tests/: test_anygrasp_full_pipeline.py  test_anygrasp_roi_and_selection.py  test_anygrasp_safe_pick.py  test_chessboard_pose.py  test_grasp_pipeline_runner.py  test_grasp_task_manager_node_config.py  test_grasp_task_manager_state_machine.py
